force-app/main/default/objects/Case/fields/Add_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Add_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Metadata</label>
    <type>Checkbox</type>
</CustomField>