force-app/main/default/objects/Case/fields/Add_metadata_field__c.field-meta.xml
<CustomField>
    <fullName>Add_metadata_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add metadata field</label>
    <type>Checkbox</type>
</CustomField>