force-app/main/default/objects/Case/fields/ADD_test__c.field-meta.xml
<CustomField>
    <fullName>ADD_test__c</fullName>
    <externalId>true</externalId>
    <label>ADD test</label>
    <type>AutoNumber</type>
</CustomField>