force-app/main/default/objects/Case/fields/AWS_Test__c.field-meta.xml
<CustomField>
    <fullName>AWS_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description change in dev1</description>
    <label>AWS Test</label>
    <type>Checkbox</type>
</CustomField>