force-app/main/default/objects/Case/fields/Back_Promote_Field__c.field-meta.xml
<CustomField>
    <fullName>Back_Promote_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Back Promote Field</label>
    <type>Checkbox</type>
</CustomField>