force-app/main/default/objects/Case/fields/Case_AAA__c.field-meta.xml
<CustomField>
    <fullName>Case_AAA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description</description>
    <label>Case AAA</label>
    <type>Checkbox</type>
</CustomField>