force-app/main/default/objects/Case/fields/Case_AAA_deleteme__c.field-meta.xml
<CustomField>
    <fullName>Case_AAA_deleteme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case AAA deleteme</label>
    <type>Checkbox</type>
</CustomField>