force-app/main/default/objects/Case/fields/Case_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Field 1</label>
    <type>Checkbox</type>
</CustomField>