force-app/main/default/objects/Case/fields/Case_JJJ__c.field-meta.xml
<CustomField>
    <fullName>Case_JJJ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>adsfadsfvc</description>
    <inlineHelpText>weferf</inlineHelpText>
    <label>Case JJJ</label>
    <type>Checkbox</type>
</CustomField>