force-app/main/default/objects/Case/fields/case_KKK__c.field-meta.xml
<CustomField>
    <fullName>case_KKK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case KKK</label>
    <type>Checkbox</type>
</CustomField>