force-app/main/default/objects/Case/fields/Case_LLL__c.field-meta.xml
<CustomField>
    <fullName>Case_LLL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case LLL</label>
    <type>Checkbox</type>
</CustomField>