force-app/main/default/objects/Case/fields/Case_MMM__c.field-meta.xml
<CustomField>
    <fullName>Case_MMM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case MMM</label>
    <type>Checkbox</type>
</CustomField>