force-app/main/default/objects/Case/fields/Case_PPP__c.field-meta.xml
<CustomField>
    <fullName>Case_PPP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case PPP</label>
    <type>Checkbox</type>
</CustomField>