force-app/main/default/objects/Case/fields/Case_QQQ__c.field-meta.xml
<CustomField>
    <fullName>Case_QQQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case QQQ</label>
    <type>Checkbox</type>
</CustomField>