force-app/main/default/objects/Case/fields/Case_TTT__c.field-meta.xml
<CustomField>
    <fullName>Case_TTT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case TTT</label>
    <type>Checkbox</type>
</CustomField>