force-app/main/default/objects/Case/fields/Case_UUU__c.field-meta.xml
<CustomField>
    <fullName>Case_UUU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case UUU</label>
    <type>Checkbox</type>
</CustomField>