force-app/main/default/objects/Case/fields/Case_WWW__c.field-meta.xml
<CustomField>
    <fullName>Case_WWW__c</fullName>
    <label>Case WWW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>AprilMOD</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>