force-app/main/default/objects/Case/fields/Case_YYY__c.field-meta.xml
<CustomField>
    <fullName>Case_YYY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case YYY</label>
    <type>Checkbox</type>
</CustomField>