force-app/main/default/objects/Case/fields/Checkbox_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Deployment</label>
    <type>Checkbox</type>
</CustomField>