force-app/main/default/objects/Case/fields/CI_Picklist_Test__c.field-meta.xml
<CustomField>
    <fullName>CI_Picklist_Test__c</fullName>
    <description>description</description>
    <label>CI Picklist Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>FFF</fullName>
            </value>
            <value>
                <fullName>GGG</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>EEE2</fullName>
                <isActive>false</isActive>
                <label>EEE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>