force-app/main/default/objects/Case/fields/CI_Test_deploy__c.field-meta.xml
<CustomField>
    <fullName>CI_Test_deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CI Test deploy</label>
    <type>Checkbox</type>
</CustomField>