force-app/main/default/objects/Case/fields/Citroen__c.field-meta.xml
<CustomField>
    <fullName>Citroen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Citroen</label>
    <type>Checkbox</type>
</CustomField>