force-app/main/default/objects/Case/fields/CO1__c.field-meta.xml
<CustomField>
    <fullName>CO1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO1</label>
    <type>Checkbox</type>
</CustomField>