force-app/main/default/objects/Case/fields/commit_file_field__c.field-meta.xml
<CustomField>
    <fullName>commit_file_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>commit file field</label>
    <type>Checkbox</type>
</CustomField>