force-app/main/default/objects/Case/fields/commit_files_fix__c.field-meta.xml
<CustomField>
    <fullName>commit_files_fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>commit files fix</label>
    <type>Checkbox</type>
</CustomField>