force-app/main/default/objects/Case/fields/Commit_test_field__c.field-meta.xml
<CustomField>
    <fullName>Commit_test_field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Useless help text!</inlineHelpText>
    <label>Commit test field</label>
    <type>Checkbox</type>
</CustomField>