force-app/main/default/objects/Case/fields/delete_test__c.field-meta.xml
<CustomField>
    <fullName>delete_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>delete test</label>
    <type>Checkbox</type>
</CustomField>