force-app/main/default/objects/Case/fields/DeleteMe2__c.field-meta.xml
<CustomField>
    <fullName>DeleteMe2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteMe2</label>
    <type>Checkbox</type>
</CustomField>