force-app/main/default/objects/Case/fields/DeleteMe__c.field-meta.xml
<CustomField>
    <fullName>DeleteMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteMe</label>
    <type>Checkbox</type>
</CustomField>