force-app/main/default/objects/Case/fields/destructive__c.field-meta.xml
<CustomField>
    <fullName>destructive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>destructive</label>
    <type>Checkbox</type>
</CustomField>