force-app/main/default/objects/Case/fields/Destructive_changes_test__c.field-meta.xml
<CustomField>
    <fullName>Destructive_changes_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destructive changes test</label>
    <type>Checkbox</type>
</CustomField>