force-app/main/default/objects/Case/fields/Destructive_full_profile_POC__c.field-meta.xml
<CustomField>
    <fullName>Destructive_full_profile_POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destructive full profile POC</label>
    <type>Checkbox</type>
</CustomField>