force-app/main/default/objects/Case/fields/Dev_field__c.field-meta.xml
<CustomField>
    <fullName>Dev_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dev field</label>
    <type>Checkbox</type>
</CustomField>