force-app/main/default/objects/Case/fields/Do_not_move_to_UAT__c.field-meta.xml
<CustomField>
    <fullName>Do_not_move_to_UAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not move to UAT</label>
    <type>Checkbox</type>
</CustomField>