force-app/main/default/objects/Case/fields/Duplicate_test__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate test</label>
    <type>Checkbox</type>
</CustomField>