force-app/main/default/objects/Case/fields/Encrypted_custom_field__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_custom_field__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Encrypted custom field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>