force-app/main/default/objects/Case/fields/Field_Test_FP__c.field-meta.xml
<CustomField>
    <fullName>Field_Test_FP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Test FP</label>
    <type>Checkbox</type>
</CustomField>