force-app/main/default/objects/Case/fields/Find_and_Replace__c.field-meta.xml
<CustomField>
    <fullName>Find_and_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Find and Replace</label>
    <type>Checkbox</type>
</CustomField>