force-app/main/default/objects/Case/fields/FLS_commit_test__c.field-meta.xml
<CustomField>
    <fullName>FLS_commit_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLS commit test</label>
    <type>Checkbox</type>
</CustomField>