force-app/main/default/objects/Case/fields/FLS_fails__c.field-meta.xml
<CustomField>
    <fullName>FLS_fails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLS fails</label>
    <type>Checkbox</type>
</CustomField>