force-app/main/default/objects/Case/fields/FLS_Test__c.field-meta.xml
<CustomField>
    <fullName>FLS_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLS Test</label>
    <type>Checkbox</type>
</CustomField>