force-app/main/default/objects/Case/fields/Ford__c.field-meta.xml
<CustomField>
    <fullName>Ford__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ford</label>
    <type>Checkbox</type>
</CustomField>