force-app/main/default/objects/Case/fields/formula_check__c.field-meta.xml
<CustomField>
    <fullName>formula_check__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>formula check</label>
    <type>Checkbox</type>
</CustomField>