force-app/main/default/objects/Case/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>