force-app/main/default/objects/Case/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home</label>
    <type>Checkbox</type>
</CustomField>