force-app/main/default/objects/Case/fields/Jaguar__c.field-meta.xml
<CustomField>
    <fullName>Jaguar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jaguar</label>
    <type>Checkbox</type>
</CustomField>