force-app/main/default/objects/Case/fields/Job_done__c.field-meta.xml
<CustomField>
    <fullName>Job_done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job done</label>
    <type>Checkbox</type>
</CustomField>