force-app/main/default/objects/Case/fields/master_bug__c.field-meta.xml
<CustomField>
    <fullName>master_bug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>master bug</label>
    <type>Checkbox</type>
</CustomField>