force-app/main/default/objects/Case/fields/Metadata_Delete__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metadata Delete</label>
    <type>Checkbox</type>
</CustomField>