force-app/main/default/objects/Case/fields/Mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile phone</label>
    <type>Checkbox</type>
</CustomField>