force-app/main/default/objects/Case/fields/Monday_commit_2__c.field-meta.xml
<CustomField>
    <fullName>Monday_commit_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday commit 2</label>
    <type>Checkbox</type>
</CustomField>