force-app/main/default/objects/Case/fields/Monday_commit__c.field-meta.xml
<CustomField>
    <fullName>Monday_commit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday commit</label>
    <type>Checkbox</type>
</CustomField>