force-app/main/default/objects/Case/fields/New_report_test_field__c.field-meta.xml
<CustomField>
    <fullName>New_report_test_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New report test field</label>
    <type>Checkbox</type>
</CustomField>