force-app/main/default/objects/Case/fields/Nitro__c.field-meta.xml
<CustomField>
    <fullName>Nitro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nitro</label>
    <type>Checkbox</type>
</CustomField>