force-app/main/default/objects/Case/fields/Pckage_field__c.field-meta.xml
<CustomField>
    <fullName>Pckage_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pckage field</label>
    <type>Checkbox</type>
</CustomField>