force-app/main/default/objects/Case/fields/Picklist_bug_test__c.field-meta.xml
<CustomField>
    <fullName>Picklist_bug_test__c</fullName>
    <label>Picklist bug test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Test 1</fullName>
                <label>Test 1</label>
            </value>
            <value>
                <fullName>Test 2</fullName>
            </value>
            <value>
                <fullName>Test 3</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>