force-app/main/default/objects/Case/fields/poc_destructive_rollback_test__c.field-meta.xml
<CustomField>
    <fullName>poc_destructive_rollback_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>poc destructive rollback test</label>
    <type>Checkbox</type>
</CustomField>