force-app/main/default/objects/Case/fields/POC_Final_2__c.field-meta.xml
<CustomField>
    <fullName>POC_Final_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Final 2</label>
    <type>Checkbox</type>
</CustomField>