force-app/main/default/objects/Case/fields/POC_final__c.field-meta.xml
<CustomField>
    <fullName>POC_final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC final</label>
    <type>Checkbox</type>
</CustomField>