force-app/main/default/objects/Case/fields/Porche__c.field-meta.xml
<CustomField>
    <fullName>Porche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Porche</label>
    <type>Checkbox</type>
</CustomField>