force-app/main/default/objects/Case/fields/Primary_Category__c.field-meta.xml
<CustomField>
    <fullName>Primary_Category__c</fullName>
    <label>Primary Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>3PI</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Account Set-up</fullName>
            </value>
            <value>
                <fullName>Add Access</fullName>
            </value>
            <value>
                <fullName>Add Contact</fullName>
            </value>
            <value>
                <fullName>Admin Tools Issue</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Amentities Incorrect</fullName>
            </value>
            <value>
                <fullName>AR Updates</fullName>
            </value>
            <value>
                <fullName>Atlantis</fullName>
            </value>
            <value>
                <fullName>Auto Renewals</fullName>
            </value>
            <value>
                <fullName>Availability Incorrect</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Beach Safety</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Business Model Change</fullName>
            </value>
            <value>
                <fullName>Cancellation Policy</fullName>
            </value>
            <value>
                <fullName>Case Escalation Request</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Compensation Change</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Connectivity Partner Outage</fullName>
            </value>
            <value>
                <fullName>Connectivity Solution Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>