force-app/main/default/objects/Case/fields/pruebapermisos__c.field-meta.xml
<CustomField>
    <fullName>pruebapermisos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pruebapermisos</label>
    <type>Checkbox</type>
</CustomField>