force-app/main/default/objects/Case/fields/Pull_request_test__c.field-meta.xml
<CustomField>
    <fullName>Pull_request_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pull request test</label>
    <type>Checkbox</type>
</CustomField>