force-app/main/default/objects/Case/fields/Recommit_test_1__c.field-meta.xml
<CustomField>
    <fullName>Recommit_test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommit test 1</label>
    <type>Checkbox</type>
</CustomField>