force-app/main/default/objects/Case/fields/Recommit_test_2__c.field-meta.xml
<CustomField>
    <fullName>Recommit_test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommit test 2</label>
    <type>Checkbox</type>
</CustomField>