force-app/main/default/objects/Case/fields/Refresh_test__c.field-meta.xml
<CustomField>
    <fullName>Refresh_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh test</label>
    <type>Checkbox</type>
</CustomField>