force-app/main/default/objects/Case/fields/Report_test_Field__c.field-meta.xml
<CustomField>
    <fullName>Report_test_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report test Field</label>
    <type>Checkbox</type>
</CustomField>