force-app/main/default/objects/Case/fields/rich__c.field-meta.xml
<CustomField>
    <fullName>rich__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>rich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>