force-app/main/default/objects/Case/fields/Rollback_fix_test__c.field-meta.xml
<CustomField>
    <fullName>Rollback_fix_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollback fix test</label>
    <type>Checkbox</type>
</CustomField>