force-app/main/default/objects/Case/fields/rollbacktest__c.field-meta.xml
<CustomField>
    <fullName>rollbacktest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>rollbacktest</label>
    <type>Checkbox</type>
</CustomField>