force-app/main/default/objects/Case/fields/Row_Level_test2__c.field-meta.xml
<CustomField>
    <fullName>Row_Level_test2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Row Level test2</label>
    <type>Checkbox</type>
</CustomField>