force-app/main/default/objects/Case/fields/Search__c.field-meta.xml
<CustomField>
    <fullName>Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Search</label>
    <type>Checkbox</type>
</CustomField>