force-app/main/default/objects/Case/fields/Snapshot_test__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snapshot test</label>
    <type>Checkbox</type>
</CustomField>