force-app/main/default/objects/Case/fields/Stop_filter__c.field-meta.xml
<CustomField>
    <fullName>Stop_filter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop filter</label>
    <length>15</length>
    <type>Text</type>
</CustomField>