force-app/main/default/objects/Case/fields/Stop_validation__c.field-meta.xml
<CustomField>
    <fullName>Stop_validation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stop validation</label>
    <length>15</length>
    <type>Text</type>
</CustomField>