force-app/main/default/objects/Case/fields/Support_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Support_Analysis__c</fullName>
    <label>Support Analysis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copado Knowledge</fullName>
            </value>
            <value>
                <fullName>Salesforce Knowledge</fullName>
            </value>
            <value>
                <fullName>Metadata API Knowledge</fullName>
            </value>
            <value>
                <fullName>Git Knowledge</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>