force-app/main/default/objects/Case/fields/team_5__c.field-meta.xml
<CustomField>
    <fullName>team_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>team 5</label>
    <type>Checkbox</type>
</CustomField>