force-app/main/default/objects/Case/fields/Test_14_Destrutive_4__c.field-meta.xml
<CustomField>
    <fullName>Test_14_Destrutive_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test 14 Destrutive 4</label>
    <type>Checkbox</type>
</CustomField>