force-app/main/default/objects/Case/fields/Test_1__c.field-meta.xml
<CustomField>
    <fullName>Test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test 1</label>
    <type>Checkbox</type>
</CustomField>