force-app/main/default/objects/Case/fields/Test_Auto__c.field-meta.xml
<CustomField>
    <fullName>Test_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Auto</label>
    <type>Checkbox</type>
</CustomField>