force-app/main/default/objects/Case/fields/Test_BETA_fix__c.field-meta.xml
<CustomField>
    <fullName>Test_BETA_fix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test BETA fix</label>
    <type>Checkbox</type>
</CustomField>