force-app/main/default/objects/Case/fields/test_deploy__c.field-meta.xml
<CustomField>
    <fullName>test_deploy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test deploy</label>
    <type>Checkbox</type>
</CustomField>