force-app/main/default/objects/Case/fields/test_destructive__c.field-meta.xml
<CustomField>
    <fullName>test_destructive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test destructive</label>
    <type>Checkbox</type>
</CustomField>