force-app/main/default/objects/Case/fields/Test_IBM__c.field-meta.xml
<CustomField>
    <fullName>Test_IBM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test IBM</label>
    <type>Checkbox</type>
</CustomField>