force-app/main/default/objects/Case/fields/test_Schedule_deployment__c.field-meta.xml
<CustomField>
    <fullName>test_Schedule_deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test Schedule deployment</label>
    <type>Checkbox</type>
</CustomField>