force-app/main/default/objects/Case/fields/Test_UI_Issue_2__c.field-meta.xml
<CustomField>
    <fullName>Test_UI_Issue_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test UI Issue 2</label>
    <type>Checkbox</type>
</CustomField>