force-app/main/default/objects/Case/fields/Test_UI_issue__c.field-meta.xml
<CustomField>
    <fullName>Test_UI_issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test UI issue</label>
    <type>Checkbox</type>
</CustomField>