force-app/main/default/objects/Case/fields/TestAPINameDev1__c.field-meta.xml
<CustomField>
    <fullName>TestAPINameDev1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestLabelDev1</label>
    <type>Checkbox</type>
</CustomField>